# intermediate-python-training

./: .gitignore  .markdownlint.json  .zenodo.json  00_python_warmup.ipynb  01_data_manipulation_and_representation.ipynb  02_statistics_with_python.ipynb  03_optimising_python.ipynb  README.md  pyproject.toml  requirements.txt  schedule.md  utils.py
course1/: 01_data_manipulation.ipynb  01_data_manipulation_and_representation.ipynb  01_pandas_basics.ipynb  02_data_description_and_representation.ipynb  02_data_manipulation_and_description.ipynb  02_statistics_with_python.ipynb  03_data_representation.ipynb  03_statistics_with_python.ipynb  Extra_Chapter_statistics_with_python.ipynb  environment.yaml  exam.ipynb  exercises_course1.ipynb  requirements.txt
course2/: 01_resource_usage_measure_and_profiling.ipynb  02_faster_python.ipynb  03_multiprocessing_multithreading_python.ipynb  03_optimising_python.ipynb  Kmeans.py  environment.yaml  exam.ipynb  exercises_course2.ipynb  requirements.txt  utils.py
course3/: 01_plotly_basics.ipynb  02_plotly_tricks.ipynb  03_plotly_project_Kmean_view.ipynb  03_plotly_project_volcano_plot.ipynb  04_plotly_dash.ipynb  04_plotly_project_Kmean_view.ipynb  05_dash_project_Kmeans.ipynb  05_dash_project_proboscidean_fossil_map.ipynb  05_dash_project_volcano.ipynb  05_plotly_dash.ipynb  06_dash_project_volcano.ipynb  dash_app1.py  environment.yaml  exam.ipynb  kmeans.py  requirements.txt
data/: census1880_fractions.csv  mice_data.csv  titanic.csv
solutions/: solution_01_01.py  solution_01_02.py  solution_01_03.py  solution_01_03_fancy.py  (+1 more)
(+63 files in other folders)
